<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.herbshouse</groupId>
    <artifactId>snowswt</artifactId>
    <version>1.0.4</version>
    <name>Snowing simulator</name>
    <url>https://github.com/crisnct/snowswt</url>

    <properties>
        <java.version>22</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <swt.version>3.128.0</swt.version>
    </properties>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencies>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.4.0-jre</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
            <version>${swt.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.1</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.32</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.nebula.widgets.nattable</groupId>
            <artifactId>org.eclipse.nebula.widgets.nattable.core</artifactId>
            <version>2.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.nebula.widgets.nattable</groupId>
            <artifactId>org.eclipse.nebula.widgets.nattable.extension.poi</artifactId>
            <version>2.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.nebula.widgets.nattable</groupId>
            <artifactId>org.eclipse.nebula.widgets.nattable.extension.glazedlists</artifactId>
            <version>2.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.nebula.widgets.nattable</groupId>
            <artifactId>org.eclipse.nebula.widgets.nattable.extension.e4</artifactId>
            <version>2.0.1</version>
        </dependency>

        <dependency>
            <groupId>com.glazedlists</groupId>
            <artifactId>glazedlists</artifactId>
            <version>1.11.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.10.0</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                </configuration>
            </plugin>

            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-jar-plugin</artifactId>-->
            <!--                <version>3.2.0</version>-->
            <!--                <configuration>-->
            <!--                    <archive>-->
            <!--                        <manifest>-->
            <!--                            <mainClass>org.herbshouse.SnowingApplication</mainClass>-->
            <!--                        </manifest>-->
            <!--                    </archive>-->
            <!--                </configuration>-->
            <!--            </plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <!--                    <descriptors>-->
                    <!--                        <descriptor>src/main/assembly/assembly.xml</descriptor>-->
                    <!--                    </descriptors>-->

                    <archive>
                        <manifest>
                            <mainClass>org.herbshouse.SnowingApplication</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>


    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/crisnct/snowswt</url>
        </repository>
    </distributionManagement>

</project>